objects/Visit_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Attendee__r.AccountID__c,  Attendee__r.AccountName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>Attendee__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Did this person attend the meeting?</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_AccountId__c</fullName>
        <description>R6</description>
        <formula>IF (Attendee__r.AccountId != NULL, CASESAFEID(Attendee__r.AccountId), NULL)</formula>
        <label>Attendee AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>Attendee__r.FirstName &amp; &quot; &quot; &amp; Attendee__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>Attendee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <formula>Attendee__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Review_ID__c</fullName>
        <formula>CASESAFEID(Visit_Report__r.Channel_Review__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Review ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>R6 - Created as part of Work Id -  284</description>
        <formula>Text(Attendee__r.ABB_Perspective_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>Text(Attendee__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Attendee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Attendee__r.Id, Attendee__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Attendee__r.Id, Attendee__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Attendee__r.OwnerId, Attendee__r.Owner.FirstName +&quot; &quot;+Attendee__r.Owner.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <formula>Attendee__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Address: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_from_ABB_Perspective__c</fullName>
        <formula>Text(Attendee__r.ABB_Perspective_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role from ABB Perspective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Text(Attendee__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Account_ID__c</fullName>
        <description>R6</description>
        <formula>IF (Visit_Report__r.Account__c != NULL, CASESAFEID(Visit_Report__r.Account__c), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Report Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Visit Attendees</relationshipLabel>
        <relationshipName>Visit_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Attendees__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visit Attendee</label>
    <nameField>
        <label>Visit Attendee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>